--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe 
-    src="ect6906.drawio.html" 
-    width="100%" 
-    height="800px" 
-    frameborder="0" 
+
+    <h2> ฟอร์แมต webp (mobile supported)</h2>
+    <div style="width: 100%; text-align: center;">
+
+        <img src="ect69.webp" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+    </div>
+        
+    <h2> ฟอร์แมต draw.io (not mobile supported)</h2>
+
+
+        <iframe 
+        src="ect6906.drawio.html" 
+        width="100%" 
+        height="800px" 
+        frameborder="0" 
     style="border: 2px solid #ccc; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
   </iframe>
 </body>
