--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="ect69.webp" alt="" style="max-width: 100%; height: auto; display: block; margin: 0 auto; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
     </div>
         
-    <h2> ฟอร์แมต draw.io (not mobile supported)</h2>
+    <h2> ฟอร์แมต draw.io กด full screen</h2>
 
 
         <iframe 
